# ai-lb

./: .env.example  .gitignore  2026-02-01-implement-the-following-plan.txt  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  README.md  demo_prompt.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  lb_concurrency_probe.py  lb_embeddings_burst.py  lb_index_documents.py  pyproject.toml  test_integration.py  test_summary.txt
.github/: copilot-instructions.md
.github/workflows/: ci-smoke.yml
agent/: README.md  __init__.py  check_env.py  cli.py  config.py  debug_gemini_models.py  debug_models.py  orchestrator.py  pyproject.toml  server.py  types.py  worker.py
agent/hybrid_agent_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/tests/: test_mcp_client.py  test_orchestrator.py  test_worker_lb.py
agent/tools/: __init__.py  mcp_client.py
config/: alertmanager.yml  prometheus.yml  redis.prod.conf
config/alerting/: ai-lb.yml  llb.yml
deploy/openclaw/: INTEGRATION.md  docker-compose.yml  test_connection.sh
docs/: ds7-production-deployment-spec.md  inspirations.md  issue-phase-4.2-cost-aware-routing.md
load_balancer/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml  requirements.txt
load_balancer/src/load_balancer/: config.py  config_validation.py  constants.py  main.py  providers.py  request_validation.py
load_balancer/src/load_balancer/execution/: __init__.py  modes.py
load_balancer/src/load_balancer/routing/: strategies.py
load_balancer/tests/: conftest.py  test_capability_pools.py  test_complexity_routing.py  test_consensus_normalization.py  test_cost_aware_routing.py  test_embeddings_and_forced_node.py  test_multi_exec.py  test_phase2_features.py  test_phase3_features.py  test_plan_execution.py  test_plan_stream.py  test_unified_lb.py
load_balancer/tests/e2e/: conftest.py  test_e2e_cost.py  test_e2e_observability.py  test_e2e_plan.py  test_e2e_resilience.py  test_e2e_routing.py
mcp_server/: README.md  requirements.txt  server.py
monitor/: Dockerfile  README.md  pyproject.toml
monitor/src/monitor/: config.py  monitor.py
monitor/src/monitor/tools/: common_models.py
node_agent/: Dockerfile  README.md  pyproject.toml
node_agent/src/node_agent/: agent.py  config.py
scripts/: ci-smoke.sh  e2e-validate.sh  mt1_analyze.py  mt1_collect.py
tasks/: todo.ai-lb-only.md  todo.llb-only.md  todo.md
tools/: cli_bridge.py  stress_test.py  tui_stream.py
