[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-agent-client"
version = "0.1.0"
description = "Hybrid Agent Client for AI-LB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "openai>=1.108.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
