[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llb_load_balancer"
version = "0.1.0"
description = "The core routing service for the Large Language Balancer."
authors = [{name = "AI Assistant"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
packages = {find = {where = "src"}}
python_requires = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring a live stack (skipped when LLB_BASE_URL is unset)",
]
