[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_lb_monitor"
version = "0.1.0"
description = "The discovery and health monitoring service for the AI Load Balancer."
authors = [{name = "AI Assistant"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
packages = {find = {where = "src"}}
python_requires = ">=3.9"
