[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_lb_node_agent"
version = "0.1.0"
description = "The hardware monitoring agent for LLM host machines."
authors = [{name = "AI Assistant"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
packages = {find = {where = "src"}}
python_requires = ">=3.9"
